function(ADD_TEST_EXECUTABLE TEST_NAME SOURCE_FILE)
    add_executable(${TEST_NAME} "${CMAKE_CURRENT_LIST_DIR}/${SOURCE_FILE}")
    target_include_directories(${TEST_NAME} PRIVATE INCLUDE_DIR)
    target_link_libraries(${TEST_NAME} GTest::gtest_main)
    gtest_discover_tests(${TEST_NAME})
endfunction()

ADD_TEST_EXECUTABLE(test_constructor test_constructor.cpp)
ADD_TEST_EXECUTABLE(test_push_back test_push_back.cpp)
ADD_TEST_EXECUTABLE(test_indexing test_indexing.cpp)
ADD_TEST_EXECUTABLE(test_front test_front.cpp)
ADD_TEST_EXECUTABLE(test_back test_back.cpp)
ADD_TEST_EXECUTABLE(test_data test_data.cpp)
ADD_TEST_EXECUTABLE(test_empty test_empty.cpp)
ADD_TEST_EXECUTABLE(test_clear test_clear.cpp)
ADD_TEST_EXECUTABLE(test_iterators test_iterators.cpp)
